packages/wenyan-parser/source/WenyanParser.ts
// Generated from packages/Wenyan.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN'
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer'
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException'
import { NotNull } from 'antlr4ts/Decorators'
import { NoViableAltException } from 'antlr4ts/NoViableAltException'
import { Override } from 'antlr4ts/Decorators'
import { Parser } from 'antlr4ts/Parser'
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext'
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator'
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener'
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor'
import { RecognitionException } from 'antlr4ts/RecognitionException'
import { RuleContext } from 'antlr4ts/RuleContext'
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from 'antlr4ts/tree/TerminalNode'
import { Token } from 'antlr4ts/Token'
import { TokenStream } from 'antlr4ts/TokenStream'
import { Vocabulary } from 'antlr4ts/Vocabulary'
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl'

import * as Utils from 'antlr4ts/misc/Utils'

import { WenyanListener } from './WenyanListener'
import { WenyanVisitor } from './WenyanVisitor'


export class WenyanParser extends Parser {
    public static readonly If = 1
    public static readonly EndDeclare = 2
    public static readonly Else = 3
    public static readonly Return = 4
    public static readonly EndStatment = 5
    public static readonly IHave = 6
    public static readonly NameAs = 7
    public static readonly ValueIs = 8
    public static readonly DeclareModule = 9
    public static readonly RanameAs = 10
    public static readonly Left5 = 11
    public static readonly Right5 = 12
    public static readonly Left6 = 13
    public static readonly Right6 = 14
    public static readonly DeclareString = 15
    public static readonly DeclareStringIs = 16
    public static readonly StringEmpty = 17
    public static readonly StringEscape1 = 18
    public static readonly StringEscape2 = 19
    public static readonly StringEscape3 = 20
    public static readonly Left = 21
    public static readonly Right = 22
    public static readonly Left3 = 23
    public static readonly Right3 = 24
    public static readonly Apply = 25
    public static readonly At = 26
    public static readonly StackIn = 27
    public static readonly Take = 28
    public static readonly StackPop = 29
    public static readonly Get = 30
    public static readonly The = 31
    public static readonly End = 32
    public static readonly FunctionStart = 33
    public static readonly FunctionEnd = 34
    public static readonly VariableStart = 35
    public static readonly VariableEnd = 36
    public static readonly DeclareMethod = 37
    public static readonly ThisIs = 38
    public static readonly Is = 39
    public static readonly Said = 40
    public static readonly MethodOf = 41
    public static readonly DeclareDigit = 42
    public static readonly DeclareDigitIs = 43
    public static readonly DeclareBoolean = 44
    public static readonly DeclareBooleanIs = 45
    public static readonly Boolean = 46
    public static readonly True = 47
    public static readonly False = 48
    public static readonly IntegerDigit = 49
    public static readonly FloatDigit = 50
    public static readonly IntegerDigitCN = 51
    public static readonly FloatDigitCN = 52
    public static readonly Equal = 53
    public static readonly Unequal = 54
    public static readonly Identifier = 55
    public static readonly Character = 56
    public static readonly LineComment = 57
    public static readonly PartComment = 58
    public static readonly WhiteSpace = 59
    public static readonly RULE_program = 0
    public static readonly RULE_statement = 1
    public static readonly RULE_ifStatement = 2
    public static readonly RULE_data = 3
    public static readonly RULE_declareData = 4
    public static readonly RULE_module = 5
    public static readonly RULE_declaremodule = 6
    public static readonly RULE_declareString = 7
    public static readonly RULE_string = 8
    public static readonly RULE_variable = 9
    public static readonly RULE_apply = 10
    public static readonly RULE_applyFunction = 11
    public static readonly RULE_applyStack = 12
    public static readonly RULE_stackIn = 13
    public static readonly RULE_stackPopOne = 14
    public static readonly RULE_stackPop = 15
    public static readonly RULE_stackOut = 16
    public static readonly RULE_stackReturn = 17
    public static readonly RULE_declarefunction = 18
    public static readonly RULE_variables = 19
    public static readonly RULE_declareNumber = 20
    public static readonly RULE_declareBoolean = 21
    public static readonly RULE_number = 22
    public static readonly RULE_digits = 23
    public static readonly RULE_skipStatement = 24
    // tslint:disable:no-trailing-whitespace
    public static readonly ruleNames: string[] = [
        'program', 'statement', 'ifStatement', 'data', 'declareData', 'module', 
        'declaremodule', 'declareString', 'string', 'variable', 'apply', 'applyFunction', 
        'applyStack', 'stackIn', 'stackPopOne', 'stackPop', 'stackOut', 'stackReturn', 
        'declarefunction', 'variables', 'declareNumber', 'declareBoolean', 'number', 
        'digits', 'skipStatement',
    ]

    private static readonly _LITERAL_NAMES: Array<string | undefined> = [
        undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
        undefined, undefined, undefined, undefined, "'\u300A'", "'\u300B'", "'<<'", 
        "'>>'", undefined, undefined, undefined, undefined, undefined, undefined, 
        "'\u300C'", "'\u300D'", "'['", "']'",
    ]
    private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
        undefined, 'If', 'EndDeclare', 'Else', 'Return', 'EndStatment', 'IHave', 
        'NameAs', 'ValueIs', 'DeclareModule', 'RanameAs', 'Left5', 'Right5', 'Left6', 
        'Right6', 'DeclareString', 'DeclareStringIs', 'StringEmpty', 'StringEscape1', 
        'StringEscape2', 'StringEscape3', 'Left', 'Right', 'Left3', 'Right3', 
        'Apply', 'At', 'StackIn', 'Take', 'StackPop', 'Get', 'The', 'End', 'FunctionStart', 
        'FunctionEnd', 'VariableStart', 'VariableEnd', 'DeclareMethod', 'ThisIs', 
        'Is', 'Said', 'MethodOf', 'DeclareDigit', 'DeclareDigitIs', 'DeclareBoolean', 
        'DeclareBooleanIs', 'Boolean', 'True', 'False', 'IntegerDigit', 'FloatDigit', 
        'IntegerDigitCN', 'FloatDigitCN', 'Equal', 'Unequal', 'Identifier', 'Character', 
        'LineComment', 'PartComment', 'WhiteSpace',
    ]
    public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(WenyanParser._LITERAL_NAMES, WenyanParser._SYMBOLIC_NAMES, [])

    // @Override
    // @NotNull
    public get vocabulary(): Vocabulary {
        return WenyanParser.VOCABULARY
    }
    // tslint:enable:no-trailing-whitespace

    // @Override
    public get grammarFileName(): string { return 'Wenyan.g4' }

    // @Override
    public get ruleNames(): string[] { return WenyanParser.ruleNames }

    // @Override
    public get serializedATN(): string { return WenyanParser._serializedATN }

    constructor(input: TokenStream) {
        super(input)
        this._interp = new ParserATNSimulator(WenyanParser._ATN, this)
    }
    // @RuleVersion(0)
    public program(): ProgramContext {
        let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state)
        this.enterRule(_localctx, 0, WenyanParser.RULE_program)
        let _la: number
        try {
            this.enterOuterAlt(_localctx, 1)
            {
            this.state = 53
            this._errHandler.sync(this)
            _la = this._input.LA(1)
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << WenyanParser.If) | (1 << WenyanParser.DeclareModule) | (1 << WenyanParser.DeclareString) | (1 << WenyanParser.StringEmpty) | (1 << WenyanParser.StringEscape1) | (1 << WenyanParser.StringEscape2) | (1 << WenyanParser.StringEscape3) | (1 << WenyanParser.Left) | (1 << WenyanParser.Left3) | (1 << WenyanParser.Apply) | (1 << WenyanParser.StackIn))) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (WenyanParser.DeclareMethod - 37)) | (1 << (WenyanParser.DeclareDigit - 37)) | (1 << (WenyanParser.DeclareDigitIs - 37)) | (1 << (WenyanParser.DeclareBoolean - 37)) | (1 << (WenyanParser.DeclareBooleanIs - 37)) | (1 << (WenyanParser.Boolean - 37)) | (1 << (WenyanParser.IntegerDigit - 37)) | (1 << (WenyanParser.FloatDigit - 37)) | (1 << (WenyanParser.IntegerDigitCN - 37)) | (1 << (WenyanParser.FloatDigitCN - 37)) | (1 << (WenyanParser.Identifier - 37)) | (1 << (WenyanParser.Character - 37)))) !== 0)) {
                {
                {
                this.state = 50
                this.statement()
                }
                }
                this.state = 55
                this._errHandler.sync(this)
                _la = this._input.LA(1)
            }
            this.state = 56
            this.match(WenyanParser.EOF)
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public statement(): StatementContext {
        let _localctx: StatementContext = new StatementContext(this._ctx, this.state)
        this.enterRule(_localctx, 2, WenyanParser.RULE_statement)
        try {
            this.state = 68
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
            case WenyanParser.DeclareModule:
                this.enterOuterAlt(_localctx, 1)
                {
                this.state = 58
                this.declaremodule()
                }
                break
            case WenyanParser.DeclareDigit:
            case WenyanParser.DeclareDigitIs:
                this.enterOuterAlt(_localctx, 2)
                {
                this.state = 59
                this.declareNumber()
                }
                break
            case WenyanParser.DeclareString:
                this.enterOuterAlt(_localctx, 3)
                {
                this.state = 60
                this.declareString()
                }
                break
            case WenyanParser.DeclareBoolean:
            case WenyanParser.DeclareBooleanIs:
                this.enterOuterAlt(_localctx, 4)
                {
                this.state = 61
                this.declareBoolean()
                }
                break
            case WenyanParser.DeclareMethod:
                this.enterOuterAlt(_localctx, 5)
                {
                this.state = 62
                this.declarefunction()
                }
                break
            case WenyanParser.Left:
            case WenyanParser.Left3:
                this.enterOuterAlt(_localctx, 6)
                {
                this.state = 63
                this.declareData()
                }
                break
            case WenyanParser.If:
                this.enterOuterAlt(_localctx, 7)
                {
                this.state = 64
                this.ifStatement()
                }
                break
            case WenyanParser.Apply:
            case WenyanParser.StackIn:
                this.enterOuterAlt(_localctx, 8)
                {
                this.state = 65
                this.apply()
                }
                break
            case WenyanParser.StringEmpty:
            case WenyanParser.StringEscape1:
            case WenyanParser.StringEscape2:
            case WenyanParser.StringEscape3:
            case WenyanParser.Boolean:
            case WenyanParser.IntegerDigit:
            case WenyanParser.FloatDigit:
            case WenyanParser.IntegerDigitCN:
            case WenyanParser.FloatDigitCN:
                this.enterOuterAlt(_localctx, 9)
                {
                this.state = 66
                this.data()
                }
                break
            case WenyanParser.Identifier:
            case WenyanParser.Character:
                this.enterOuterAlt(_localctx, 10)
                {
                this.state = 67
                this.skipStatement()
                }
                break
            default:
                throw new NoViableAltException(this)
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public ifStatement(): IfStatementContext {
        let _localctx: IfStatementContext = new IfStatementContext(this._ctx, this.state)
        this.enterRule(_localctx, 4, WenyanParser.RULE_ifStatement)
        try {
            this.enterOuterAlt(_localctx, 1)
            {
            this.state = 70
            this.match(WenyanParser.If)
            this.state = 71
            this.statement()
            this.state = 72
            this.match(WenyanParser.EndDeclare)
            this.state = 73
            this.match(WenyanParser.Else)
            this.state = 74
            this.statement()
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public data(): DataContext {
        let _localctx: DataContext = new DataContext(this._ctx, this.state)
        this.enterRule(_localctx, 6, WenyanParser.RULE_data)
        try {
            this.state = 79
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
            case WenyanParser.StringEmpty:
            case WenyanParser.StringEscape1:
            case WenyanParser.StringEscape2:
            case WenyanParser.StringEscape3:
                this.enterOuterAlt(_localctx, 1)
                {
                this.state = 76
                this.string()
                }
                break
            case WenyanParser.IntegerDigit:
            case WenyanParser.FloatDigit:
            case WenyanParser.IntegerDigitCN:
            case WenyanParser.FloatDigitCN:
                this.enterOuterAlt(_localctx, 2)
                {
                this.state = 77
                this.digits()
                }
                break
            case WenyanParser.Boolean:
                this.enterOuterAlt(_localctx, 3)
                {
                this.state = 78
                this.match(WenyanParser.Boolean)
                }
                break
            default:
                throw new NoViableAltException(this)
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public declareData(): DeclareDataContext {
        let _localctx: DeclareDataContext = new DeclareDataContext(this._ctx, this.state)
        this.enterRule(_localctx, 8, WenyanParser.RULE_declareData)
        try {
            this.enterOuterAlt(_localctx, 1)
            {
            this.state = 81
            this.variable()
            this.state = 82
            this.match(WenyanParser.EndDeclare)
            this.state = 83
            this.data()
            this.state = 84
            this.match(WenyanParser.EndStatment)
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public module(): ModuleContext {
        let _localctx: ModuleContext = new ModuleContext(this._ctx, this.state)
        this.enterRule(_localctx, 10, WenyanParser.RULE_module)
        try {
            this.state = 95
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
            case WenyanParser.Left3:
                this.enterOuterAlt(_localctx, 1)
                {
                this.state = 86
                this.match(WenyanParser.Left3)
                this.state = 87
                this.match(WenyanParser.Identifier)
                this.state = 88
                this.match(WenyanParser.Right3)
                }
                break
            case WenyanParser.Left5:
                this.enterOuterAlt(_localctx, 2)
                {
                this.state = 89
                this.match(WenyanParser.Left5)
                this.state = 90
                this.match(WenyanParser.Identifier)
                this.state = 91
                this.match(WenyanParser.Right5)
                }
                break
            case WenyanParser.Left6:
                this.enterOuterAlt(_localctx, 3)
                {
                this.state = 92
                this.match(WenyanParser.Left6)
                this.state = 93
                this.match(WenyanParser.Identifier)
                this.state = 94
                this.match(WenyanParser.Right6)
                }
                break
            default:
                throw new NoViableAltException(this)
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public declaremodule(): DeclaremoduleContext {
        let _localctx: DeclaremoduleContext = new DeclaremoduleContext(this._ctx, this.state)
        this.enterRule(_localctx, 12, WenyanParser.RULE_declaremodule)
        try {
            this.enterOuterAlt(_localctx, 1)
            {
            this.state = 97
            this.match(WenyanParser.DeclareModule)
            this.state = 98
            _localctx._m = this.module()
            this.state = 99
            this.match(WenyanParser.RanameAs)
            this.state = 100
            _localctx._v = this.variable()
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public declareString(): DeclareStringContext {
        let _localctx: DeclareStringContext = new DeclareStringContext(this._ctx, this.state)
        this.enterRule(_localctx, 14, WenyanParser.RULE_declareString)
        let _la: number
        try {
            this.state = 118
            this._errHandler.sync(this)
            switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
            case 1:
                this.enterOuterAlt(_localctx, 1)
                {
                this.state = 102
                this.match(WenyanParser.DeclareString)
                this.state = 104
                this._errHandler.sync(this)
                _la = this._input.LA(1)
                if (_la === WenyanParser.ValueIs) {
                    {
                    this.state = 103
                    this.match(WenyanParser.ValueIs)
                    }
                }

                this.state = 106
                _localctx._s = this.string()
                this.state = 107
                this.match(WenyanParser.NameAs)
                this.state = 108
                _localctx._v = this.variable()
                }
                break

            case 2:
                this.enterOuterAlt(_localctx, 2)
                {
                this.state = 110
                this.match(WenyanParser.DeclareString)
                this.state = 111
                this.match(WenyanParser.NameAs)
                this.state = 112
                _localctx._v = this.variable()
                this.state = 114
                this._errHandler.sync(this)
                _la = this._input.LA(1)
                if (_la === WenyanParser.ValueIs) {
                    {
                    this.state = 113
                    this.match(WenyanParser.ValueIs)
                    }
                }

                this.state = 116
                _localctx._s = this.string()
                }
                break
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public string(): StringContext {
        let _localctx: StringContext = new StringContext(this._ctx, this.state)
        this.enterRule(_localctx, 16, WenyanParser.RULE_string)
        try {
            this.state = 124
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
            case WenyanParser.StringEmpty:
                _localctx = new StringRemove0Context(_localctx)
                this.enterOuterAlt(_localctx, 1)
                {
                this.state = 120
                this.match(WenyanParser.StringEmpty)
                }
                break
            case WenyanParser.StringEscape1:
                _localctx = new StringRemove2Context(_localctx)
                this.enterOuterAlt(_localctx, 2)
                {
                this.state = 121
                this.match(WenyanParser.StringEscape1)
                }
                break
            case WenyanParser.StringEscape2:
                _localctx = new StringRemove1Context(_localctx)
                this.enterOuterAlt(_localctx, 3)
                {
                this.state = 122
                this.match(WenyanParser.StringEscape2)
                }
                break
            case WenyanParser.StringEscape3:
                _localctx = new StringRemove1Context(_localctx)
                this.enterOuterAlt(_localctx, 4)
                {
                this.state = 123
                this.match(WenyanParser.StringEscape3)
                }
                break
            default:
                throw new NoViableAltException(this)
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public variable(): VariableContext {
        let _localctx: VariableContext = new VariableContext(this._ctx, this.state)
        this.enterRule(_localctx, 18, WenyanParser.RULE_variable)
        try {
            this.state = 132
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
            case WenyanParser.Left:
                this.enterOuterAlt(_localctx, 1)
                {
                this.state = 126
                this.match(WenyanParser.Left)
                this.state = 127
                _localctx._v = this.match(WenyanParser.Identifier)
                this.state = 128
                this.match(WenyanParser.Right)
                }
                break
            case WenyanParser.Left3:
                this.enterOuterAlt(_localctx, 2)
                {
                this.state = 129
                this.match(WenyanParser.Left3)
                this.state = 130
                _localctx._v = this.match(WenyanParser.Identifier)
                this.state = 131
                this.match(WenyanParser.Right3)
                }
                break
            default:
                throw new NoViableAltException(this)
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public apply(): ApplyContext {
        let _localctx: ApplyContext = new ApplyContext(this._ctx, this.state)
        this.enterRule(_localctx, 20, WenyanParser.RULE_apply)
        try {
            this.state = 136
            this._errHandler.sync(this)
            switch (this._input.LA(1)) {
            case WenyanParser.Apply:
                this.enterOuterAlt(_localctx, 1)
                {
                this.state = 134
                this.applyFunction()
                }
                break
            case WenyanParser.StackIn:
                this.enterOuterAlt(_localctx, 2)
                {
                this.state = 135
                this.applyStack()
                }
                break
            default:
                throw new NoViableAltException(this)
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public applyFunction(): ApplyFunctionContext {
        let _localctx: ApplyFunctionContext = new ApplyFunctionContext(this._ctx, this.state)
        this.enterRule(_localctx, 22, WenyanParser.RULE_applyFunction)
        try {
            this.enterOuterAlt(_localctx, 1)
            {
            this.state = 138
            this.match(WenyanParser.Apply)
            this.state = 139
            _localctx._f = this.variable()
            this.state = 140
            this.match(WenyanParser.At)
            this.state = 141
            _localctx._x = this.variable()
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re
                this._errHandler.reportError(this, re)
                this._errHandler.recover(this, re)
            } else {
                throw re
            }
        }
        finally {
            this.exitRule()
        }
        return _localctx
    }
    // @RuleVersion(0)
    public applyStack(): ApplyStackContext {
        let _localctx: ApplyStackContext = new ApplyStackContext(this._ctx, this.state)
        this.enterRule(_localctx, 24, WenyanParser.RULE_applyStack)
        try {
            let _alt: number
            this.enterOuterAlt(_localctx, 1)
            {
            this.state = 143
            this.stackIn()
            this.state = 147
            this._errHandler.sync(this)
            _alt = 1
            do {
                switch (_alt) {
                case 1:
                    {
                    this.state = 147
                    this._errHandler.sync(this)
                    switch (this._input.LA(1)) {
                    case WenyanParser.StackIn:
                        {
                        this.state = 144
                        this.stackIn()
                        }
                        break
                    case WenyanParser.StackPop:
                        {
                        this.state = 145
                        this.stackPopOne()
                        }
                        break
                    case WenyanParser.Get:
                        {
                        this.state = 146
                        this.stackPop()
                        }
                        break
                    default:
                        throw new NoViableAltException(this)
                    }
                    }
                    break
                default:
                    throw new NoViableAltException(this)
                }
                this.state = 149
                this._errHandler.sync(this)
                _alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx)
            } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER)
            this.state = 153
            this._errHandler.sync(this)
            switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
            case 1:
                {
                this.state = 151
                this.stackOut()
                }
                break
